Add Raycast-inspired benchmark UI - interactive performance comparison
Beautiful, clean web interface for showcasing mojo-audio vs librosa performance.
Raycast + Clean Light aesthetic with smooth animations.

UI FEATURES:
- Interactive side-by-side benchmark comparison
- Configurable parameters (duration, FFT size, iterations)
- Real-time performance visualization
- Optimization journey chart (476ms → 12ms)
- Smooth Raycast-style animations
- Download results as JSON
- Responsive design

DESIGN (Raycast-inspired):
- Clean light theme (white/soft gray backgrounds)
- Soft orange accents (Mojo branding)
- Generous whitespace
- Rounded cards with subtle shadows
- Pill-style radio buttons
- Large, clear numbers
- Smooth cubic-bezier transitions

TECH STACK:
- Backend: FastAPI (async, fast API)
- Frontend: Vanilla JS (no framework overhead)
- Charts: Chart.js (soft color palette)
- Styling: Custom CSS (Raycast aesthetics)

STRUCTURE:
ui/
├── backend/
│   ├── app.py              # FastAPI server
│   └── requirements.txt    # Python deps
├── frontend/
│   └── index.html          # Main UI
├── static/
│   ├── css/style.css       # Raycast-style CSS
│   └── js/main.js          # Benchmark logic + Chart.js
└── README.md               # Setup instructions

USAGE:
pixi run ui                 # Start UI server
# Open: http://localhost:8000

PERFECT FOR:
- Blog post embeds
- Live demos
- Social media
- GitHub README showcase
- Developer presentations

All ready for deployment (Vercel, Railway, Docker)!

--- a/pixi.toml
+++ b/pixi.toml
@@ -27,6 +27,9 @@ bench-python = "python benchmarks/compare_librosa.py"
 # Development
 repl = "mojo"
 
+# UI
+ui = "cd ui/backend && python app.py"
+
 [dependencies]
 max = ">=26.1.0.dev2025123105,<27"
 mojo = ">=0.26.1.0.dev2025123105,<0.27"
