--- a/pixi.toml
+++ b/pixi.toml
@@ -37,3 +37,7 @@ matplotlib = ">=3.10.8,<4"
 scipy = ">=1.16.3,<2"
 librosa = ">=0.11.0,<0.12"
 numba = ">=0.63.1,<0.64"
+fastapi = ">=0.115.3"
+uvicorn = ">=0.27.0"
+pydantic = ">=2.5.3"
+python-multipart = ">=0.0.6"
