feat: Add C-compatible FFI layer for cross-language integration
Implements a complete Foreign Function Interface (FFI) to enable calling
mojo-audio from C, Rust, Python, and other languages. This solves a critical
frame count bug in Candle's pcm_to_mel and enables integration with dev-voice.

## Core Implementation

- **Handle-based API**: Uses int64_t handles instead of pointers to work
  around Mojo 0.26.1 nested pointer limitations
- **9 exported C functions**: Complete API for mel spectrogram computation
- **Inlined mel_spectrogram**: 650 lines of audio processing code inlined
  to avoid shared library import issues

## API Design

```c
// Get configuration
MojoMelConfig config;
mojo_mel_config_default(&config);

// Compute mel spectrogram (returns handle)
MojoMelHandle handle = mojo_mel_spectrogram_compute(audio, 480000, &config);

// Get result dimensions
size_t n_mels, n_frames;
mojo_mel_spectrogram_get_shape(handle, &n_mels, &n_frames);
// Returns: (80, 2998) for 30s audio

// Retrieve data
float* mel_data = malloc(n_mels * n_frames * sizeof(float));
mojo_mel_spectrogram_get_data(handle, mel_data, n_mels * n_frames);

// Cleanup
mojo_mel_spectrogram_free(handle);
```

## Validation

Tested with 30s audio (480k samples @ 16kHz):
- ✅ Output: (80, 2998) frames - Whisper compatible
- ✅ Correct frame count (NOT 4500 like Candle's bug!)
- ✅ Log-scaled mel values in expected range
- ✅ Memory management validated (alloc/free)

## Technical Details

**Mojo 0.26.1 FFI Constraints Discovered:**
1. No struct returns by value - must use pointer parameters
2. Must use fixed-size types (Int32, Int64, UInt64) not Int
3. Handles must be Int64 for 64-bit pointer addresses
4. Cannot call imported functions in shared lib context
5. Origin parameters required (MutAnyOrigin, ImmutOrigin.external)

**Build System:**
- New pixi tasks: build-ffi, build-ffi-optimized, install-ffi, clean-ffi
- Creates libmojo_audio.so (31KB, 9 exports)
- Installs to ~/.local/lib and ~/.local/include



--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,18 @@
 kgen.trace.*
 
 docs/tmp
+
+# FFI build artifacts
+*.so
+*.a
+*.o
+test_*
+!tests/
+
+# Prompt/handoff documents
+*HANDOFF*.md
+*PROMPT*.md
+*DEBUG*.md
+REVISED_*.md
+SOLUTION_*.md
+FIX_*.md
