fix: improve benchmark methodology for consistent results
- Replace random audio with deterministic chirp signal (20Hz-8000Hz)
- Increase iterations from 3-10 to 20 for statistical significance
- Add 5 warmup runs to stabilize JIT and caches
- Track per-iteration timing with std dev reporting
- Add outlier rejection (drop min/max values)
- Create combined benchmark script for back-to-back comparison
- Add pixi task: bench-compare

--- a/pixi.toml
+++ b/pixi.toml
@@ -23,6 +23,7 @@ demo = "mojo -I src examples/mel_demo.mojo"
 bench = "mojo -I src benchmarks/bench_mel_spectrogram.mojo"
 bench-optimized = "mojo -O3 -I src benchmarks/bench_mel_spectrogram.mojo"
 bench-python = "python benchmarks/compare_librosa.py"
+bench-compare = "python benchmarks/compare_all.py"
 
 # Development
 repl = "mojo"
