feat: add stable benchmark with median reporting
- New script runs N complete benchmark passes (default: 5)
- Reports median instead of mean for robustness against outliers
- Shows individual runs, std dev, and coefficient of variation
- Reveals Mojo has 5-10% variance vs librosa's 31-54%

Usage: pixi run bench-stable [num_runs]

--- a/pixi.toml
+++ b/pixi.toml
@@ -24,6 +24,7 @@ bench = "mojo -I src benchmarks/bench_mel_spectrogram.mojo"
 bench-optimized = "mojo -O3 -I src benchmarks/bench_mel_spectrogram.mojo"
 bench-python = "python benchmarks/compare_librosa.py"
 bench-compare = "python benchmarks/compare_all.py"
+bench-stable = "python benchmarks/bench_stable.py"
 
 # Development
 repl = "mojo"
