--- a/pixi.toml
+++ b/pixi.toml
@@ -53,3 +53,15 @@ fastapi = ">=0.115.3"
 uvicorn = ">=0.27.0"
 pydantic = ">=2.5.3"
 python-multipart = ">=0.0.6"
+
+# BLAS backend features - allows switching between MKL and OpenBLAS
+[feature.mkl.dependencies]
+libblas = { version = "*", build = "*mkl" }
+
+[feature.openblas.dependencies]
+libblas = { version = "*", build = "*openblas" }
+
+[environments]
+default = { features = ["mkl"], solve-group = "default" }
+mkl = { features = ["mkl"], solve-group = "default" }
+openblas = { features = ["openblas"], solve-group = "openblas" }
