fix: configure macOS build with OpenBLAS and platform-specific settings
- Keep Linux as primary platform in pixi.toml (uses MKL)
- GitHub Actions dynamically configures macOS builds:
  - Switches platform to osx-arm64 or osx-64
  - Uses OpenBLAS instead of MKL (MKL not available on macOS)
- Change deprecated macos-13 runner to macos-12
- Disable cache during build (platform-specific modifications)
- Generate pixi.lock for Linux platform

This approach allows Linux development while CI handles macOS builds.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: latest
+          cache: false
 
       - name: Build FFI library
         run: pixi run build-ffi-optimized
@@ -61,16 +62,25 @@ jobs:
         include:
           - runner: macos-latest  # Apple Silicon (M1)
             arch: arm64
-          - runner: macos-13      # Intel
+            platform: osx-arm64
+          - runner: macos-12      # Intel
             arch: x86_64
+            platform: osx-64
     runs-on: ${{ matrix.runner }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Configure pixi for macOS
+        run: |
+          # Update pixi.toml to use macOS platform and OpenBLAS (MKL not available on macOS)
+          sed -i.bak 's/platforms = \["linux-64"\]/platforms = ["${{ matrix.platform }}"]/' pixi.toml
+          sed -i.bak 's/default = { features = \["mkl"\]/default = { features = ["openblas"]/' pixi.toml
 
       - name: Install pixi
         uses: prefix-dev/setup-pixi@v0.8.1
         with:
           pixi-version: latest
+          cache: false
 
       - name: Build FFI library
         run: pixi run build-ffi-optimized
