--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,6 +76,10 @@ jobs:
           # Update pixi.toml to use macOS platform and OpenBLAS (MKL not available on macOS)
           sed -i.bak 's/platforms = \["linux-64"\]/platforms = ["${{ matrix.platform }}"]/' pixi.toml
           sed -i.bak 's/default = { features = \["mkl"\]/default = { features = ["openblas"]/' pixi.toml
+          # Remove MKL environment (not supported on macOS)
+          sed -i.bak '/^mkl = { features/d' pixi.toml
+          # Remove MKL feature dependencies
+          sed -i.bak '/^\[feature\.mkl\.dependencies\]/,/^\[feature\.openblas\.dependencies\]/{/^\[feature\.mkl\.dependencies\]/d; /libblas/d;}' pixi.toml
 
       - name: Install pixi
         uses: prefix-dev/setup-pixi@v0.8.1
