--- a/pixi.toml
+++ b/pixi.toml
@@ -55,8 +55,8 @@ install-ffi = """
 """
 
 [dependencies]
-max = "26.1.*"
-mojo = "0.26.1.*"
+max = ">=26.1.0.dev2026010718,<27"
+mojo = ">=0.26.1.0.dev2026010718,<0.27"
 matplotlib = ">=3.10.8,<4"
 scipy = ">=1.16.3,<2"
 librosa = ">=0.11.0,<0.12"
